using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isOnWall = "isonwall";//是否触墙
    internal static string isOnCelling = "isonelling";//是否触碰到天花板
    internal static string isGround = "isground";//是否在地板上
    internal static string AttackZone = "attack";//攻击区域
    internal static string canMove = "canmove";//能否移动
    internal static string hasTarget = "hastarget";//是否有目标
    internal static string isAlive = "isalive";//是否存活
    internal static string isHit = "ishit";//是否被攻击
    internal static string hitTrigger = "hit";//hit触发器
    internal static string vLock = "v_lock";//速度锁定
    internal static string Attackcooldown="attackcooldown";//攻击冷却
    internal static string hasTarget2 = "hastarget2";//控制用
    internal static string Attack2cooldown="attack2cooldown";
    internal static string findPlayer="findplayer";
    internal static string hasTarget3="hastarget3";
    internal static string hasTarget4 = "hastarget4";
    internal static string Attack3cooldown = "attack3cooldown";
    internal static string Attack4cooldown = "attack4cooldown";
    internal static string callAttackdown = "callattackdown";
}
